# sunrise-sunset-calculator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adapter.c  adapter.h  brightness.c  brightness.h  calculator.c  calculator.h  gmtime.h  test_util.h  time_util.h
.github/workflows/: cmake.yml  rust.yml
c/: .clang-format  .gitignore  CMakeLists.txt  README.md
c/examples/: ssc_example.c
c/include/: spa.h  ssc.h
c/src/: spa.c  ssc.c
c/test/: nostdlib.c  spa_tester.c  test_ssc.c  util.h
include/: ssc.h
rust/: Cargo.toml  README.md
rust-bindings/: Cargo.toml  README.md  bindings.rs  bindings.sh  build.rs
rust-bindings/src/: binding.rs  example.rs  lib.rs
rust/src/: example.rs  lib.rs  spa.rs
src/: .clang-format  CMakeLists.txt  spa.c  spa.h  ssc.c
src/include/: spa.h  ssc.h
src/src/: spa.c  ssc.c
src/test/: nostdlib.c  spa_tester.c  ssc_example.c  test_ssc.c  util.h
test/: spa_tester.c  ssc_example.c  test_ssc.c
