[package]
name = "sunrise-sunset-calculator"
version = "0.2.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/jacob-pro/sunrise-sunset-calculator"
homepage = "https://github.com/jacob-pro/sunrise-sunset-calculator"
license = "LGPL-3.0"
description = "Rust Bindings to the Sunrise Sunset Calculator C Library"
links = "ssc"

[dependencies]
cty = "0.2.1"
err-derive = { version = "0.3.0", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"
geocoding = "0.3.1"

[features]
default = ["std"]
std = ["err-derive/std"]

# It would be nice if this was the [[bin]] instead, but dependencies make it difficult
# https://stackoverflow.com/a/46017284
# https://github.com/rust-lang/cargo/issues/1982
# https://github.com/rust-lang/rfcs/pull/3020
[[example]]
name = "sunrise-sunset-calculator"
path = "src/example.rs"
