[package]
name = "sunrise-sunset-calculator"
version = "1.0.1"
edition = "2021"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
repository = "https://github.com/jacob-pro/sunrise-sunset-calculator"
homepage = "https://github.com/jacob-pro/sunrise-sunset-calculator"
license-file = "LICENSE"
description = "Sunrise sunset calculator for Rust, supports extreme latitudes."

[dependencies]
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0"
approx = "0.5.1"
chrono = "0.4.24"
clap = { version = "3.2.6", features = ["derive"] }
geocoding = "0.3.1"

[profile.test]
opt-level = 3

# It would be nice if this was the [[bin]] instead, but dependencies make it difficult
# https://stackoverflow.com/a/46017284
# https://github.com/rust-lang/cargo/issues/1982
# https://github.com/rust-lang/rfcs/pull/3020
[[example]]
name = "sunrise-sunset-calculator"
path = "src/example.rs"
